--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
     </parent>
 
     <groupId>com.gurkensalat.jenkins-ci.plugins</groupId>
-    <artifactId>pushbullet</artifactId>
+    <artifactId>pushbullet-notifier</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
-    <name>Pushbullet Plugin</name>
+    <name>Pushbullet Notifier Plugin</name>
 
     <properties>
 
@@ -276,7 +276,7 @@
         </dependency>
     </dependencies>
 
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Pushbullet+Plugin</url>
+    <url>https://wiki.jenkins-ci.org/display/JENKINS/Pushbullet+Notifier+Plugin</url>
     <inceptionYear>2014</inceptionYear>
 
     <licenses>
@@ -300,10 +300,10 @@
     </developers>
 
     <scm>
-        <connection>scm:git:ssh://github.com/jenkinsci/pushbullet-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/pushbullet-plugin.git</developerConnection>
+        <connection>scm:git:ssh://github.com/jenkinsci/${project.artifactId}.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/${project.artifactId}.git</developerConnection>
         <tag>HEAD</tag>
-        <url>https://github.com/jenkinsci/pushbullet-plugin</url>
+        <url>https://github.com/jenkinsci/${project.artifactId}</url>
     </scm>
 
     <issueManagement>
